--- a/Index.html
+++ b/Index.html
@@ -16,7 +16,7 @@
       <div class="ten columns">
 
            <span class="one column"><h5>name</h5></span>
-          <input class="ten columns InputText" id=clearname type="text" placeholder="Enter text here...." required>
+          <input class="ten columns InputText" id=clearname type="text" placeholder="Enter text here....">
 
         <span class="counter one column">0</span>
       </div>
