added background image and changed color for the counter

--- a/Index.html
+++ b/Index.html
@@ -7,16 +7,16 @@
 
 </head>
 
-<body>
+<body background="https://image.ibb.co/jrjw0y/hallo.png">
   <div class="container box">
-  <header>
-    <h1 class="greet"><h1>GREETINGS</h1>
-  </header>
+    <header>
+      <h1 class="greet"><h1>GREETINGS</h1>
+    </header>
     <div class="row">
       <div class="ten columns">
 
-           <span class="one column"><h5>name</h5></span>
-          <input class="ten columns InputText" id=clearname type="text" placeholder="Enter text here....">
+        <span class="one column"><h5>name</h5></span>
+        <input class="ten columns InputText" id=clearname type="text" placeholder="Enter text here....">
 
         <span class="counter one column">0</span>
       </div>
