--- a/test.html
+++ b/test.html
@@ -1,4 +1,4 @@
-<<head>
+<head>
   <meta charset="utf-8">
   <title></title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mocha/3.2.0/mocha.css">
